# UBB-FMI-WORK

./: README.md
Fifth Semester/Parallel and Distributed Programming/ExamJava/: output.txt
Fifth Semester/Parallel and Distributed Programming/Lab1/: date.txt  output_secv.txt
Fifth Semester/Parallel and Distributed Programming/Lab1C/: CMakeLists.txt  dinamic.cpp  main.cpp  outC.csv  scriptC.ps1
Fifth Semester/Parallel and Distributed Programming/Lab3MPI/Varianta0/: CMakeLists.txt  Numar1.txt  Numar2.txt  main.cpp
First Semester/ASC - Arhitectura sistemelor de calcul/PROBLEME/: pregatire_asc.txt  tema.txt
First Semester/FP - Fundamentals of programming/LAB4-6CHELTUIELI/: main.py
Fourth Semester/AI - Artificial Intelligence/: README.md
Fourth Semester/AI - Artificial Intelligence/DentistryProject/: README.md  all_patients_radiography_data.csv  p11-20.csv  proiectStoma.ipynb
Fourth Semester/AI - Artificial Intelligence/Lab10-neural-networks/: README.md  dolphins.py  dolphins2.py  football.py  karate.py  karate2.py  krebs.py  krebs2.py  main.py
Fourth Semester/AI - Artificial Intelligence/Lab2AI/: main.py
Fourth Semester/AI - Artificial Intelligence/Lab3-Azure-text-recognition/: main.py
Fourth Semester/AI - Artificial Intelligence/Lab4-Image-recognition/: main.py
Fourth Semester/Database Management Systems/: README.md
Fourth Semester/Design and Programming Environments/: README.md
Fourth Semester/Software Engineering/: bd.config  build.gradle
Third Semester/DB - Databases/: GestiuneGarajePractic.sql  PracticalExam.sql
(+657 files in other folders)
